config/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mctc
  annotations:
    mctc-component: webhook
spec:
  rules:
    - host: "webhooks.mctc.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mctc-webhooks
                port:
                  number: 8082
